Steps menu added to home page

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MONGODB_URI=mongodb+srv://mikecurrier18:vHc9QxkmeMJyi74D@test-accounts.f4tebym.m
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=b82CkM01tqxRl6MY1GWDTBWI82GGMuoph8BDYPRwYj4=
+EMAILJS_SERVICE_ID=service_lr5iz6m
+EMAILJS_TEMPLATE_ID=template_sxfuch6
+EMAILJS_PUBLIC_KEY=Xartee8rWOBaOzOxs
